spacing issues

--- a/frontend/src/publicSpace/public.module.css
+++ b/frontend/src/publicSpace/public.module.css
@@ -70,6 +70,7 @@
 .header .createButton{
     padding: 5px 10px;
     margin: 0px;
+    margin-left: 15px;
 }
 
 .header h1{
@@ -147,7 +148,7 @@
 
 .backbutton{
     cursor:pointer;
-    
+    margin-right: 15px;
 }
 
 @media(max-width:1440px){
